# python-project-lvl2

./: .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: cli.py  diff.py  formatter.py  generate_diff.py  parser.py
gendiff/format/: __init__.py  plain.py  pretty.py
gendiff/formatters/: __init__.py  json.py  plain.py  pretty.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_generate_diff.py
tests/fixtures/: json  plain  pretty  result.json
