[tool.poetry]
name = "alezi06-gendiff"
version = "0.1.0"
description = ""
authors = ["alezi06 <alezi06@mail.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
